# shm-next

./: .env.example  .github-repo-config.yml  .gitignore  .pre-commit-config.yaml  =2.0  =4.1  ANALYSIS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  RELEASE-v0.1.0.md  SHM_COMPATIBILITY_PLAN.md  alembic.ini  coverage.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
admin/: .dockerignore  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
admin/app/: globals.css  layout.tsx  page.tsx
admin/app/abonents/: page.tsx
admin/app/automation/: page.tsx
admin/app/billing/: page.tsx
admin/app/finance/: page.tsx
admin/app/login/: page.tsx
admin/app/payments/: page.tsx
admin/app/reports/: page.tsx
admin/app/services/: page.tsx
admin/app/settings/: page.tsx
admin/app/spool/: page.tsx
admin/app/tariffs/: page.tsx
admin/components/: auth-guard.tsx  brand-logo.tsx  client-layout.tsx  language-switcher.tsx  login-page-client.tsx  query-provider.tsx  sidebar-nav.tsx
admin/components/modals/: change-tariff-modal.tsx  create-abonent-modal.tsx  index.ts  service-modal.tsx  tariff-modal.tsx  top-up-balance-modal.tsx
admin/components/ui/: button.tsx  checkbox.tsx  confirmation-dialog.tsx  dialog.tsx  label.tsx  select.tsx  sonner.tsx  tabs.tsx  textarea.tsx
admin/lib/: api.ts  store.ts
admin/lib/hooks/: use-abonent-services.ts  use-abonents.ts  use-automation.ts  use-billing.ts  use-bonus-entries.ts  use-dashboard.ts  use-discounts.ts  use-invoices.ts  use-payments.ts  use-services.ts  use-spool-tasks.ts  use-tariffs.ts
admin/lib/i18n/: LanguageProvider.tsx  i18n.ts
admin/lib/store/: auth.ts
alembic/: env.py
alembic/versions/: 001_initial.py  002_create_payments.py  003_add_updated_at_column.py  004_create_spool_tasks.py  005_create_catalog_services.py  006_extend_user_services_for_shm.py  007_create_event_action_rules.py  008_create_tariff_services.py  009_add_tariffs_version.py  010_create_withdraws.py  011_create_invoices.py  012_create_bonus_entries_and_discounts.py  013_create_automation_settings.py  014_extend_abonent_profiles_storage.py  20260515_085756_initial.py
app/: __init__.py  _version.py  settings.py
app/api/: __init__.py  app.py  config.py  dependencies.py  main.py  middleware.py  router.py
app/api/dto/: __init__.py  base.py  errors.py  requests.py  responses.py
app/api/middleware/: __init__.py  auth.py  tracing.py
app/api/v1/: __init__.py  abonents.py  auth.py  automation.py  billing.py  bonus_entries.py  catalog_services.py  config.py  dashboard.py  discounts.py  event_action_rules.py  events.py  health.py  invoices.py  payments.py  services.py  spool.py  tariffs.py  webhooks.py
app/core/: __init__.py
app/core/application/: __init__.py
app/core/domain/: __init__.py  exceptions.py
app/core/services/: billing_engine.py  event_bus.py
app/infrastructure/: __init__.py
app/infrastructure/auth/: exceptions.py  jwt.py  password.py  permissions.py
app/infrastructure/cache/: redis_cache.py
app/infrastructure/db/: __init__.py  database.py  models.py  unit_of_work.py
app/infrastructure/notifications/: __init__.py  base.py  email.py  push.py  sms.py
app/infrastructure/observability/: logging.py  metrics.py  tracer.py
app/infrastructure/queue/: tasks.py
app/infrastructure/security/: secret_crypto.py
app/worker/: __init__.py  app.py  brokers.py
app/worker/tasks/: __init__.py  billing.py  maintenance.py  notifications.py  spool.py
client/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
client/app/: globals.css  layout.tsx
client/app/dashboard/: page.tsx
client/app/login/: page.tsx
client/app/payments/: page.tsx
client/app/profile/: page.tsx
client/app/register/: page.tsx
client/app/services/: page.tsx
client/app/tariffs/: page.tsx
client/components/: app-shell.tsx  auth-client-wrapper.tsx  auth-provider.tsx  auth-wrapper.tsx  bottom-nav.tsx  brand-logo.tsx  language-switcher.tsx
client/components/ui/: button.tsx  card.tsx  input.tsx
client/lib/: api.ts  config.ts  i18n.tsx  utils.ts
client/lib/hooks/: use-abonent.ts  use-payments.ts  use-services.ts  use-tariffs.ts
docs/: BILLING_GUIDE.md
scripts/: init-db.sh
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/factories/: __init__.py
tests/integration/: __init__.py  conftest.py  test_abonent_repo.py  test_bonus_entry_repo.py  test_discount_repo.py  test_invoice_repo.py  test_optimistic_locking.py  test_payment_repo.py  test_payment_repository.py  test_service_repo.py  test_session_repo.py  test_spool_repo.py  test_spool_task_repository.py  test_tariff_repo.py  test_tariff_repository.py  test_tariff_service_repo.py  test_unit_of_work.py  test_user_service_repository.py  test_withdraw_repo.py  test_withdraw_repository.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  test_abonent_controller.py  test_auth_controller.py  test_auth_middleware.py  test_billing_controller.py  test_bonus_entry_controller.py  test_catalog_service_controller.py  test_config.py  test_discount_controller.py  test_invoice_controller.py  test_payment_controller.py  test_service_controller.py  test_shm_api_dto.py  test_tariff_controller.py
tests/unit/application/: __init__.py  test_abonent_service.py  test_billing_service.py  test_invoice_service.py  test_payment_service.py  test_process_billing_service.py  test_service_service.py  test_service_spool_handler.py  test_tariff_service.py
tests/unit/domain/: __init__.py  test_abonent_entity.py  test_abonent_events.py  test_billing_engine.py  test_billing_events.py  test_bonus_entry_entity.py  test_catalog_service_entity.py  test_discount_entity.py  test_event_action_rule_entity.py  test_event_bus.py  test_invoice_entity.py  test_payment_entity.py  test_property_based.py  test_repository_protocols.py  test_service_events.py  test_session_entity.py  test_spool_events.py  test_spool_task.py  test_tariff_entity.py  (+4 more)
worker/: app.py
(+122 files in other folders)
