[project]
name = "shm-next"
version = "3.0.0"
description = "SHM Next — Система управления абонентами нового поколения"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SHM Team", email = "team@shm.local"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Litestar",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Architecture :: Clean Architecture",
]
dependencies = [
    "litestar>=2.8,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=23.0,<25.0",
    "httpx>=0.25,<1.0",
    "redis[hiredis]>=5.0,<6.0",
    "pyjwt>=2.8,<3.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7,<2.0",
    "taskiq[redis]>=0.11,<1.0",
    "arq>=0.26,<1.0",
    "alembic>=1.13,<2.0",
    "prometheus-client>=0.19,<1.0",
    "opentelemetry-api>=1.21,<2.0",
    "opentelemetry-sdk>=1.21,<2.0",
    "python-dateutil>=2.8,<3.0",
    "apscheduler>=3.10,<4.0",
    "ujson>=5.8,<6.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-xdist>=3.5,<4.0",
    "httpx>=0.25,<1.0",
    "factory-boy>=3.3,<4.0",
    "faker>=20.0,<25.0",
    "freezegun>=1.3,<2.0",
    "pytest-mock>=3.11,<4.0",
    "pytest-subtests>=0.10,<1.0",
    "ruff>=0.1.8,<1.0",
    "black>=23.0,<25.0",
    "isort>=5.12,<6.0",
    "mypy>=1.7,<2.0",
    "pylint>=3.0,<4.0",
    "bandit>=1.7,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["RUF002", "RUF003", "RUF012", "S105", "B904"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true